kubernetes/base/istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: dev  # or `prod`, or omit to apply cluster-wide
spec:
  mtls:
    mode: STRICT
